Tweaks to readme and css (try fix menu icon bug on safari)

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -139,6 +139,7 @@ li>a:hover{
 .navbar-toggler-icon > i {
     font-size: 3rem;
     text-align: right;
+    line-height: normal;
 }
 
 /* Font styles */
